# manager_handlers

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: lib.rs  manager.rs
src/core/: macros.rs  mod.rs  states.rs  traits.rs
src/core/communication/: mod.rs  multibus.rs  pub_sub.rs
src/core/routes/: files.rs  general.rs  middleware.rs  mod.rs
src/core/security/: cert.rs
src/tests/: mod.rs  tests.rs
src/tests/data/: mod.rs  test_2.rs  test_3.rs  test_5.rs  test_6.rs
