[package]
name = "manager_handlers"
version = "0.7.2"
edition = "2024"
authors = ["Matei Aruxandei <stefmatei22@gmail.com>"]
description = "A microservice manager implementation that creates HTTP-accessible handlers with configurable replicas. Handlers communicate via an internal bus, enabling collaborative request processing in a distributed architecture."
documentation = "https://docs.rs/manager_handlers"
homepage = "https://github.com/mat50013/manager_handlers"
repository = "https://github.com/mat50013/manager_handlers"
readme = "README.md"
license = "MIT"
keywords = ["microservice", "handler", "async", "actix-web", "pubsub"]
categories = ["web-programming", "asynchronous", "network-programming"]
exclude = ["__MACOSX/", "*.iml", ".idea/", "target/"]

[dependencies]
actix-web = { version = "4.9.0", features = ["rustls-0_23"] }
async-trait = "0.1.74"
futures = "0.3.30"
lazy_static = "1.5.0"
serde_json = "1.0.108"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.17"
bytes = "1.10.0"
futures-util = "0.3.31"
async-stream = "0.3.6"
env_logger = "0.11.6"
rustls = "0.23.23"
rustls-pemfile = "2.2.0"
x509-parser = "0.17.0"
serde = { version = "1.0.218", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"] }
redis = { version = "0.32.5", features = ["tokio-comp", "aio"] }

[features]
default = []
log = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[lib]
doctest = false